stop reload when remove

--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
                                 <input type="text" class="form-control" id="train-desti" placeholder="City, State"
                                     aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
                                 <!-- input 3&4&5 -->
-                                <label class="train-time">First Train Time (24hrs):</label>
+                                <label class="train-time">First Train Time (12-hr):</label>
                                 <input type="text" class="form-control" id="train-hour" placeholder="hh" aria-label="Sizing example input"
                                     aria-describedby="inputGroup-sizing-default">
                                 <input type="text" class="form-control" id="train-min" placeholder="mm" aria-label="Sizing example input"
                                     aria-describedby="inputGroup-sizing-default">
                                 <select class="form-control" id="train-ampm">
-                                    <option value="AM">am</option>
+                                    <option selected value="AM">am</option>
                                     <option value="PM">pm</option>
                                 </select>
                                 <!-- input 6 -->
