--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="container">
         <div class="jumbotron jumbotron-fluid" id="jumbonav">
             <div class="container">
-                <div class="display-4" id="jumbo">TRAIN SCHEDULER</div>
+                <div class="display-4" id="jumbo">TRAIN<img src="assets/images/clock1.gif" class="clock">SCHEDULER</div>
                 <p class="lead" id="leader">UR Bootcamp Firebase Assignment Recommended Train Scheduler by Isaac.</p>
             </div>
         </div>
