--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="jumbotron jumbotron-fluid" id="jumbonav">
             <div class="container">
                 <div class="display-4" id="jumbo">TRAIN<img src="assets/images/clock1.gif" class="clock">SCHEDULER</div>
-                <p class="lead" id="leader">UR Bootcamp Firebase Assignment Recommended Train Scheduler by Isaac.</p>
+                <p class="lead" id="leader">Richmond Virginia - Main Street Train Station</p>
             </div>
         </div>
 
@@ -120,7 +120,7 @@
                         </tr>
                     </tbody>
                 </table>
-                <div class="table-plus">- Real Time Train Information -</div>
+                <div class="table-plus">- Train Information -</div>
             </div>
         </div>
     </div>
